--- a/dbwwinkel/templates/dbwwinkel/name.html
+++ b/dbwwinkel/templates/dbwwinkel/name.html
@@ -1,22 +1,37 @@
 {% extends "base/base.html" %}
+{% load static %}
+
+{% block extra_head %}
+        <link rel="stylesheet" href="{% static 'dbwwinkel/css/form.css' %} ">
+{% endblock %}
+
 {% block content %}
-    <div class = "container">
+    <div class = "container-fluid">
         <div class = "row">
             <div class = col-xs-12>
+
                 <form action="/your-name/" method="post" class = "form-horizontal">
                     {% csrf_token %}
+                    <div class = "container">
+                    <div class = "row">
                     {% for field in form %}
-                    <div class="form-group">
-                        <div class="col-md-4">
+                     <div class="col-md-10">
+                        <div class="form-group">
 
-                            {{ field.label_tag }}{{ field }}
+                            {{ field.label_tag }}<br>{{ field }}
                             {% if field.help_text %}
                             <p class="help">{{ field.help_text|safe }}</p>
                             {% endif %}
                         </div>
                     </div>
                     {% endfor %}
-                    <input type="submit" value="Submit" />
+                    </div>
+                    </div>
+                <div class = "container ">
+                    <div class = "row form-group">
+                       <button type="submit" class ="btn" >Registreer vraag </button>
+                    </div>
+                    </div>
                 </form>
             </div>
         </div>
