--- a/dbwwinkel/templates/dbwwinkel/vraagstelform.html
+++ b/dbwwinkel/templates/dbwwinkel/vraagstelform.html
@@ -10,7 +10,7 @@
         <div class = "row">
             <div class = col-xs-12>
 
-                <form action="/your-name/" method="post" class = "form-horizontal">
+                <form action="{% url 'register_question' %}" method="post" class = "form-horizontal">
                     {% csrf_token %}
                     <div class = "container">
                     <div class = "row">
