--- a/dbwwinkel/templates/dbwwinkel/vraagstelform.html
+++ b/dbwwinkel/templates/dbwwinkel/vraagstelform.html
@@ -1,4 +1,4 @@
-{% extends "../../../wwinkel/templates/base/base.html" %}
+{% extends "base/base.html" %}
 {% load static %}
 
 {% block extra_head %}
