--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -24,7 +24,7 @@
             </ul>
              <ul class = "nav navbar-nav navbar-center">
               <li class="nav-item">
-                 <form action =  "/zoekeenvraag" >
+                 <form action =  {% url 'list_questions' %} >
                     <div class ="form-inline">
                     <input type ="text" placeholder="zoek een vraag">
                     <button type="submit" class="btn btn-default">
@@ -37,13 +37,22 @@
 
 
             <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a href="{% url 'register_question' %}">Stel een vraag</a>
+                    </li>
 
+                    <li class="nav-item">
+                    <a href=#>Afmelden</a>
+                    </li>
+                {% else %}
                 <li class="nav-item">
-                    <a href="/register/">Registreer</a>
+                    <a href=#>Registreer</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/login/">Log in</a>
+                    <a href=#>Aanmelden</a>
                 </li>
+                {% endif %}
             </ul>
 
 
