--- a/dbwwinkel/templates/dbwwinkel/vraagstelform.html
+++ b/dbwwinkel/templates/dbwwinkel/vraagstelform.html
@@ -17,8 +17,13 @@
                     {% for field in form %}
                      <div class="col-md-10">
                         <div class="form-group">
-
-                            {{ field.label_tag }}<br>{{ field }}
+                            {{ field.label_tag }}<br>
+                             {% for error in field.errors %}
+                               <div class="alert alert-danger">
+                                    <strong>Error: </strong>{{ error }}
+                                </div>
+                            {% endfor %}
+                            {{ field }}
                             {% if field.help_text %}
                             <p class="help">{{ field.help_text|safe }}</p>
                             {% endif %}
