--- a/dbwwinkel/templates/dbwwinkel/detail_question.html
+++ b/dbwwinkel/templates/dbwwinkel/detail_question.html
@@ -10,7 +10,10 @@
                 </div>
             <div class = "col-md-2">
                 <br>
-                <button type="submit" class="btn btn-default pull-down">Edit</button>
+                <a class="btn btn-success pull-down"
+                        href = "{% url 'edit_question' question.id %}">
+                    Vraag Bewerken
+                </a>
             </div>
         </div>
     </div>
