--- a/dbwwinkel/templates/dbwwinkel/question_list.html
+++ b/dbwwinkel/templates/dbwwinkel/question_list.html
@@ -27,7 +27,11 @@ $(document).ready(function($) {
     </thead>
       <tbody>
       {% for question in questions %}
-          <tr class ='table-row' data-href = "{% url 'detail' question.id %}" style="cursor: pointer;">
+          <tr {% if question.status.id  ==  1%} class = "table-row success"
+              {% else %}  class ="table-row"
+              {% endif %}
+              data-href = "{% url 'detail_organisation' question.id %}" style="cursor: pointer;">
+
             <td>{{ question.creation_date.date }}</td>
             <td>{{question.question_text  }}</td>
             <td>{{ question.deadline }}</td>
