--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -43,14 +43,14 @@
                     </li>
 
                     <li class="nav-item">
-                    <a href=#>Afmelden</a>
+                    <a href="{% url 'logout' %}">Afmelden</a>
                     </li>
                 {% else %}
                 <li class="nav-item">
-                    <a href=#>Registreer</a>
+                    <a href= #>Registreer</a>
                 </li>
                 <li class="nav-item">
-                    <a href=#>Aanmelden</a>
+                    <a href={% url 'login' %}>Aanmelden</a>
                 </li>
                 {% endif %}
             </ul>
