--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -47,7 +47,7 @@
                     </li>
                 {% else %}
                 <li class="nav-item">
-                    <a href= #>Registreer</a>
+                    <a href= "{% url 'register_user' %}">Registreer</a>
                 </li>
                 <li class="nav-item">
                     <a href={% url 'login' %}>Aanmelden</a>
