--- a/dbwwinkel/templates/dbwwinkel/question_list.html
+++ b/dbwwinkel/templates/dbwwinkel/question_list.html
@@ -30,10 +30,10 @@ $(document).ready(function($) {
           <tr {% if question.status.id  ==  1%} class = "table-row success"
               {% else %}  class ="table-row"
               {% endif %}
-              data-href = "{% url 'detail_organisation' question.id %}" style="cursor: pointer;">
+              data-href = "{% url 'detail_organisation' question.object.id %}" style="cursor: pointer;">
 
             <td>{{ question.creation_date.date }}</td>
-            <td>{{question.question_text  }}</td>
+            <td>{{question.object.question_text  }}</td>
             <td>{{ question.deadline }}</td>
             <td>{{ question.status_name}}</td>
           </tr>
