--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -24,9 +24,9 @@
             </ul>
              <ul class = "nav navbar-nav navbar-center">
               <li class="nav-item">
-                 <form action =  "{% url 'list_questions' %}" >
+                 <form action =  "{% url 'list_questions'  %} " method="get" accept-charset="utf-8" >
                     <div class ="form-inline">
-                    <input type ="text" placeholder="zoek een vraag">
+                    <input type ="text" placeholder="zoek een vraag" name="search_text">
                     <button type="submit" class="btn btn-default">
                         <i class ="glyphicon glyphicon-search"></i>
                         </button>
