--- a/dbwwinkel/templates/dbwwinkel/status_templates/student.html
+++ b/dbwwinkel/templates/dbwwinkel/status_templates/student.html
@@ -1,5 +1,4 @@
-<form>
-   <input type ="checkbox"> open<br>
-    <input type ="checkbox"> afgerond <br>
-    <input type ="checkbox"> in optie <br>
-</form>
+
+<input type ="checkbox" value = "open" name ="status"> open <br>
+<input type ="checkbox" value = "done" name ="status"> afgerond <br>
+<input type ="checkbox" value = "in_option" name ="status"> in optie <br>
