--- a/dbwwinkel/templates/dbwwinkel/status_templates/student.html
+++ b/dbwwinkel/templates/dbwwinkel/status_templates/student.html
@@ -1,4 +1,4 @@
 
-<input type ="checkbox" value = "open" name ="status"> open <br>
-<input type ="checkbox" value = "done" name ="status"> afgerond <br>
-<input type ="checkbox" value = "in_option" name ="status"> in optie <br>
+<input type ="checkbox" value = 5 name ="status"> open <br> <!-- 5 is the id for free -->
+<input type ="checkbox" value = 6 name ="status"> afgerond <br> <!-- 6 is the id for in option -->
+<input type ="checkbox" value = 8 name ="status"> in optie <br> <!-- 8 is the option for done -->
