--- a/custom_users/templates/custom_users/organisation_registration_form.html
+++ b/custom_users/templates/custom_users/organisation_registration_form.html
@@ -1,34 +1,44 @@
 {% extends "base/base.html" %}
+{% load static %}
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'dbwwinkel/css/form.css' %} ">
+{% endblock %}
 
 {% block content %}
-    <div class = "container">
     <form action = "{% url 'register_organisation' %}" method = "post">
-        {% csrf_token %}
-        {% for form in forms %}
-            <div class = "col-md-4">
-                {% for field in form %}
-                    <div class ="row">
-                             <div class="col-md-10">
-                                <div class="form-group">
-                                    {{ field.label_tag }} <br>
-                                     {% for error in field.errors %}
-                                       <div class="alert alert-danger">
-                                            <strong>Error: </strong>{{ error }}
-                                        </div>
-                                    {% endfor %}
-                                    {{ field }}
-                                    {% if field.help_text %}
-                                    <p class="help">{{ field.help_text|safe }}</p>
-                                    {% endif %}
-                                </div>
-                            </div>
-                    </div>
-                {% endfor %}
-            </div>
+    <div class ="container">
+        <div class = "row">
+            <h2> Informatie Organisatie</h2>
+            {% for field in organisation_form %}
+                <div class ="form-group">
+                    {{ field.label_tag }}<br/>
+                    {{ field }}
+                </div>
         {% endfor %}
-        <div class="row">
-            <input type="submit" value="Submit" />
         </div>
-    </form>
+        <div class ="row">
+            <h2> Adres Organisatie</h2>
+            {% for field in address_form %}
+                <div class ="form-group">
+                    {{ field.label_tag }}<br/>
+                    {{ field }}
+                </div>
+            {% endfor %}
+        </div>
+        <div class ="row">
+            <h2>Gebruikers Informatie</h2>
+            {% for field in user_form %}
+                <div class ="form-group">
+                {{ field.label_tag }}<br/>
+                {{ field }}
+                </div>
+            {% endfor %}
+        </div>
+        <div class ="row">
+            <button type="submit" class="btn btn-default" value = "Registreer">Registreer</button>
+        </div>
+
     </div>
+
+    </form>
 {% endblock %}
