--- a/custom_users/templates/custom_users/organisation_registration_form.html
+++ b/custom_users/templates/custom_users/organisation_registration_form.html
@@ -6,39 +6,40 @@
 
 {% block content %}
     <form action = "{% url 'register_organisation' %}" method = "post">
-    <div class ="container">
-        <div class = "row">
-            <h2> Informatie Organisatie</h2>
-            {% for field in organisation_form %}
-                <div class ="form-group">
+        {% csrf_token %}
+        <div class ="container">
+            <div class = "row">
+                <h2> Informatie Organisatie</h2>
+                {% for field in organisation_form %}
+                    <div class ="form-group">
+                        {{ field.label_tag }}<br/>
+                        {{ field }}
+                    </div>
+            {% endfor %}
+            </div>
+            <div class ="row">
+                <h2> Adres Organisatie</h2>
+                {% for field in address_form %}
+                    <div class ="form-group">
+                        {{ field.label_tag }}<br/>
+                        {{ field }}
+                    </div>
+                {% endfor %}
+            </div>
+            <div class ="row">
+                <h2>Gebruikers Informatie</h2>
+                {% for field in user_form %}
+                    <div class ="form-group">
                     {{ field.label_tag }}<br/>
                     {{ field }}
-                </div>
-        {% endfor %}
-        </div>
-        <div class ="row">
-            <h2> Adres Organisatie</h2>
-            {% for field in address_form %}
-                <div class ="form-group">
-                    {{ field.label_tag }}<br/>
-                    {{ field }}
-                </div>
-            {% endfor %}
-        </div>
-        <div class ="row">
-            <h2>Gebruikers Informatie</h2>
-            {% for field in user_form %}
-                <div class ="form-group">
-                {{ field.label_tag }}<br/>
-                {{ field }}
-                </div>
-            {% endfor %}
-        </div>
-        <div class ="row">
-            <button type="submit" class="btn btn-default" value = "Registreer">Registreer</button>
-        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class ="row">
+                <button type="submit" class="btn btn-default" value = "Registreer">Registreer</button>
+            </div>
 
-    </div>
+        </div>
 
     </form>
 {% endblock %}
