added question list central unit

--- a/dbwwinkel/templates/dbwwinkel/question_list.html
+++ b/dbwwinkel/templates/dbwwinkel/question_list.html
@@ -56,7 +56,7 @@
                     <td>{{ question.object.creation_date.date }}</td>
                     <td>{{question.object.question_text  }}</td>
                     <td>{{ question.object.deadline }}</td>
-                    <td>{{ question.object.status_name}}</td>
+                    <td>{{ question.object.state_name}}</td>
                   </tr>
               {% endfor %}
               </tbody>
