we can distribute questions

--- a/dbwwinkel/templates/dbwwinkel/detail_question/detail_question_base.html
+++ b/dbwwinkel/templates/dbwwinkel/detail_question/detail_question_base.html
@@ -10,7 +10,8 @@
                 </div>
             <div class = "col-md-2">
                 <br>
-                {% include button_template %}
+                {% block options %}
+                {% endblock %}
             </div>
         </div>
     </div>
