--- a/dbwwinkel/templates/dbwwinkel/detail_question/central_unit.html
+++ b/dbwwinkel/templates/dbwwinkel/detail_question/central_unit.html
@@ -1,5 +1,6 @@
-
-<form name ="region" action = "{% url "distribute_question" question_id %}" method = 'post' accept-charset="utf-8">
+{% extends 'dbwwinkel/detail_question/detail_question_base.html' %}
+{% block options %}
+<form name ="region" action = "{% url "distribute_question" question.id %}" method = 'post' accept-charset="utf-8">
 {% csrf_token %}
     {% for region in region_lst %}
         <input type ="checkbox" value = "{{ region.1 }}" name ="region"> {{ region.0 }}<br>
@@ -9,3 +10,4 @@
         <button type="submit" value = "select">toewijzen </button>
     </div>
 </form>
+{% endblock %}
