--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -50,7 +50,7 @@
                     </li>
                 {% else %}
                 <li class="nav-item">
-                    <a href= "{% url 'register_user' %}">Registreer</a>
+                    <a href= "{% url 'register_organisation' %}">Registreer</a>
                 </li>
                 <li class="nav-item">
                     <a href={% url 'login' %}>Aanmelden</a>
