--- a/dbwwinkel/templates/dbwwinkel/detail_question/central_unit.html
+++ b/dbwwinkel/templates/dbwwinkel/detail_question/central_unit.html
@@ -1,19 +1,18 @@
 {% extends 'dbwwinkel/detail_question/detail_question_base.html' %}
 {% block options %}
-    <div class = "col-md-6">
-        <form name ="region" action = "{% url "distribute_question" question.id %}" method = 'post' accept-charset="utf-8">
+    {% if question.state == question.DRAFT_QUESTION %}
+        <strong>Toewijzen voor intake:</strong>
+        <form name ="region" action = "{% url "distribute_intake" question.id %}" method = 'post' accept-charset="utf-8">
             {% csrf_token %}
             {% for region in region_lst %}
-             <input type ="checkbox" value = "{{ region.1 }}" name ="region"> {{ region.0 }}<br>
-
+                <input type ="radio" value = "{{ region.1 }}" name ="region"> {{ region.0 }}<br>
             {% endfor %}
         <div class = "row form-group">
             <button type="submit" value = "select">toewijzen </button>
         </div>
         </form>
-    </div>
-    <div class = "col-md-6">
+    {% endif %}
         <a class="btn btn-danger pull-down" href = {% url "deny_question" question.id %}>Vraag weigeren</a>
-    </div>
+
 
 {% endblock %}
