--- a/dbwwinkel/templates/dbwwinkel/detail_question/detail_question_base.html
+++ b/dbwwinkel/templates/dbwwinkel/detail_question/detail_question_base.html
@@ -14,6 +14,7 @@
                 <div class="sidebar-nav-fixed affix">
                     <div class="well">
                         <ul class="nav ">
+                            Opties: <br>
                             {% block options %}
                             {% endblock %}
                         </ul>
@@ -46,6 +47,15 @@
                             {{organisation.organisationuser.last_name  }}<br>
                             <strong>Email: </strong> {{organisation.organisationuser.email  }}<br>
                             <strong>Tel:</strong> {{ organisation.organisationuser.telephone }}
+                        </div>
+                        <div class = "col-md-4">
+                            <h3>Info </h3>
+                            <strong>Status: </strong>{{ question.get_state_display }} <br>
+                            <strong>Regio(s)</strong>:
+                            {% for region in question.region.all  %}
+                                {{ region }}
+                            {% endfor %}
+
                         </div>
 
                     </div>
