--- a/dbwwinkel/templates/dbwwinkel/detail_question/regional_unit.html
+++ b/dbwwinkel/templates/dbwwinkel/detail_question/regional_unit.html
@@ -1,15 +1,8 @@
 {% extends 'dbwwinkel/detail_question/detail_question_base.html' %}
 {% block options %}
-    {% if question.state.state == 3  or question.state.state == 2 %}
-        <a class="btn btn-success pull-down" href = "{% url 'open_question' question.id %}">Vraag vrijgeven </a>
+    {% if question.state == question.IN_PROGRESS_QUESTION_REGIONAL %}
+        <a class="btn btn-warning " href = {% url "edit_question" question.id %}>Vraag wijzigen</a><br><br>
+        <a class ="btn btn-info" href = {% url "internal_remark" question.id %}>Opmerking toevoegen</a><br><br>
+        <a class = "btn btn-info" href = {% url %}
     {% endif %}
-
-    {% if question.state.state == 5 %}
-        <a class="btn btn-success pull-down" href = "{% url 'assign_question' question.id %}">Toewijzen</a>
-    {% endif %}
-
-    {% if question.state.state == 6 %}
-        <a class="btn btn-success pull-down" href = "{% url 'round_up_question' question.id %}">Afronden</a>
-    {% endif %}
-
 {% endblock %}
