Can edit subject_field

--- a/dbwwinkel/templates/dbwwinkel/detail_question/detail_question_base.html
+++ b/dbwwinkel/templates/dbwwinkel/detail_question/detail_question_base.html
@@ -54,6 +54,10 @@
                             <strong>Regio(s)</strong>:
                             {% for region in question.region.all  %}
                                 {{ region }}
+                            {% endfor %}<br>
+                            <strong>Onderzoeksveld(en):</strong>
+                            {% for study_field in question.study_field.all %}
+                                {{ study_field }}
                             {% endfor %}
 
                         </div>
