--- a/dbwwinkel/templates/dbwwinkel/edit_meta_data.html
+++ b/dbwwinkel/templates/dbwwinkel/edit_meta_data.html
@@ -10,29 +10,57 @@
             <div class='panel-heading'>
                 <h1> Pas hier alle extra info van de vraag aan</h1>
             </div>
-            <div class ='panel panel-body'>
-                <div class ='col-md-3 col-lg-2'>
+            <div class='panel panel-body'>
+                <div class='col-md-3 col-lg-2'>
                     <strong>Instelling(en)</strong><br>
                     <p><strong>Huidig:</strong>{% for field in question.institution.all %}
                         {{ field }}{% endfor %}</p>
                 </div>
-                <div class = 'col-md-3'>
-                    <div class ='container-fluid'>
-                    {{ form.institution.errors }}
-                    {{ form.institution.label_tag }}
-                    {{ form.institution }}
+                <div class='col-md-3'>
+                    <div class='container-fluid'>
+                        {{ form.institution.errors }}
+                        {{ form.institution.label_tag }}
+                        {{ form.institution }}
                     </div>
                 </div>
-                <div class = 'col-md-3'>
-                    <div class = 'container-fluid'>
-                        <a href = '{% url 'register_institution' question.id %}'>Instelling niet in de lijst? Klik hier</a>
+                <div class='col-md-3'>
+                    <div class='container-fluid'>
+                        <a href='{% url 'register_institution' question.id %}'>Instelling niet in de lijst? Klik
+                            hier</a>
                     </div>
                 </div>
-                <div class = 'col-md-3'>
-                    <div class = 'container-fluid'>
+                <div class='col-md-3'>
+                    <div class='container-fluid'>
                         {{ form.institution_delete.errors }}
                         {{ form.institution_delete.label_tag }}
                         {{ form.institution_delete }}
+                    </div>
+                </div>
+            </div>
+            <div class='panel panel-body'>
+                <div class='col-md-3 col-lg-2'>
+                    <strong>Promotor(s)</strong><br>
+                    <p><strong>Huidig:</strong>{% for field in question.promtor.all %}
+                        {{ field }}{% endfor %}</p>
+                </div>
+                <div class='col-md-3'>
+                    <div class='container-fluid'>
+                        {{ form.promotor.errors }}
+                        {{ form.promotor.label_tag }}
+                        {{ form.promotor }}
+                    </div>
+                </div>
+                <div class='col-md-3'>
+                    <div class='container-fluid'>
+                        <a href='{% url 'register_promotor' question.id %}'>Promotor niet in de lijst? Klik
+                            hier</a>
+                    </div>
+                </div>
+                <div class='col-md-3'>
+                    <div class='container-fluid'>
+                        {{ form.promotor_delete.errors }}
+                        {{ form.promotor_delete.label_tag }}
+                        {{ form.promotor_delete }}
                     </div>
                 </div>
             </div>
