--- a/dbwwinkel/templates/dbwwinkel/edit_meta_data.html
+++ b/dbwwinkel/templates/dbwwinkel/edit_meta_data.html
@@ -40,7 +40,7 @@
             <div class='panel panel-body'>
                 <div class='col-md-3 col-lg-2'>
                     <strong>Promotor(s)</strong><br>
-                    <p><strong>Huidig:</strong>{% for field in question.promtor.all %}
+                    <p><strong>Huidig:</strong>{% for field in question.promotor.all %}
                         {{ field }}{% endfor %}</p>
                 </div>
                 <div class='col-md-3'>
