--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Base</title>
+    <title>De wetenschapswinkel</title>
 
     <link rel="stylesheet" href="{% static 'dbwwinkel/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'dbwwinkel/css/wwinkel.css' %} ">
